[system test] - adapt JBOD system tests for KRaft and also make it co… (#10007)
Signed-off-by: see-quick <maros.orsak159@gmail.com>